--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         },
         "ConnectionStrings": {
-            "DefaultConnection": "Server=NOTE31-S28\\SQLEXPRESS; DataBase = filmes; User Id = sa; Pwd = Senai@134; TrustServerCertificate=True;"
+            //"DefaultConnection": "Server=NOTE31-S28\\SQLEXPRESS; DataBase = filmes; User Id = sa; Pwd = Senai@134; TrustServerCertificate=True;"
+            "DefaultConnection": "Server=NOTE31-S28\\SQLEXPRESS; DataBase = Event; User Id = sa; Pwd = Senai@134; TrustServerCertificate=True;"
         }
     },
   "AllowedHosts": "*"
